[gd_scene load_steps=19 format=3 uid="uid://7jd6jt7j4hyl"]

[ext_resource type="Script" uid="uid://b218b0wglc3ly" path="res://characters/kim_inimigo.gd" id="1_t7i1d"]
[ext_resource type="Texture2D" uid="uid://dirkwnilyat3p" path="res://assets/sprites/Kim Inimigo/Kim GeneralSheet.png" id="1_wprev"]
[ext_resource type="Texture2D" uid="uid://dewvwwa7ttn1x" path="res://assets/sprites/Kim Inimigo/Kim Espada Sheet.png" id="3_72425"]
[ext_resource type="AudioStream" uid="uid://dqdqsdgnyc05o" path="res://assets/sounds/sfx/Hitsound 2.mp3" id="4_72425"]

[sub_resource type="Animation" id="Animation_gafsn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KimEspada:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-20, 0)]
}

[sub_resource type="Animation" id="Animation_x6nfo"]
resource_name = "idle"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45000002),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KimEspada:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0, 0),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1)]
}

[sub_resource type="Animation" id="Animation_5egx7"]
resource_name = "look_left"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0, 0),
"update": 0,
"values": [Vector2(-1, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0, 0),
"update": 0,
"values": [Vector2(19, 0), Vector2(-20, 0)]
}

[sub_resource type="Animation" id="Animation_m76os"]
resource_name = "look_right"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0, 0),
"update": 0,
"values": [Vector2(1, 1), Vector2(-1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0, 0),
"update": 0,
"values": [Vector2(-20, 0), Vector2(19, 0)]
}

[sub_resource type="Animation" id="Animation_r2t63"]
resource_name = "walk"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KimEspada:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0, 0),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ark4r"]
_data = {
&"RESET": SubResource("Animation_gafsn"),
&"idle": SubResource("Animation_x6nfo"),
&"look_left": SubResource("Animation_5egx7"),
&"look_right": SubResource("Animation_m76os"),
&"walk": SubResource("Animation_r2t63")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x6nfo"]
size = Vector2(41, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7i1d"]
size = Vector2(41, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_72425"]
size = Vector2(38, 36)

[sub_resource type="Animation" id="Animation_1xny3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EspadaHitbox/SlashCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EspadaHitbox/PierceCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ark4r"]
resource_name = "attack"
length = 0.91
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.25, 0.4, 0.5, 0.55, 0.65, 0.7, 0.8000001, 0.9, 0.91),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EspadaHitbox/SlashCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EspadaHitbox/PierceCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.45000002, 0.8, 0.90000004),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5gebe"]
_data = {
&"RESET": SubResource("Animation_1xny3"),
&"attack": SubResource("Animation_ark4r")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h71ub"]
size = Vector2(15, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_77iyd"]
size = Vector2(13, 16)

[node name="KimInimigo" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_t7i1d")

[node name="KimSprite" type="Sprite2D" parent="."]
position = Vector2(-20, 0)
texture = ExtResource("1_wprev")
hframes = 5
vframes = 3

[node name="KimAnimation" type="AnimationPlayer" parent="KimSprite"]
libraries = {
&"": SubResource("AnimationLibrary_ark4r")
}
autoplay = "walk"

[node name="KimVisao" type="Area2D" parent="KimSprite"]
position = Vector2(20, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KimSprite/KimVisao"]
position = Vector2(-28.5, 0)
shape = SubResource("RectangleShape2D_x6nfo")

[node name="KimEspada" type="Sprite2D" parent="KimSprite"]
z_index = -1
texture = ExtResource("3_72425")
hframes = 11

[node name="EspadaHitbox" type="Area2D" parent="KimSprite/KimEspada" groups=["Hitbox"]]
position = Vector2(20, 0)

[node name="SlashCollision" type="CollisionShape2D" parent="KimSprite/KimEspada/EspadaHitbox"]
position = Vector2(-28.5, 0)
shape = SubResource("RectangleShape2D_t7i1d")
disabled = true

[node name="PierceCollision" type="CollisionShape2D" parent="KimSprite/KimEspada/EspadaHitbox"]
position = Vector2(-27, 5)
shape = SubResource("RectangleShape2D_72425")
disabled = true

[node name="EspadaAniation" type="AnimationPlayer" parent="KimSprite/KimEspada"]
libraries = {
&"": SubResource("AnimationLibrary_5gebe")
}

[node name="KimBody" type="CollisionShape2D" parent="." groups=["enemy"]]
position = Vector2(-0.5, 6.5)
shape = SubResource("RectangleShape2D_h71ub")

[node name="KimHurtbox" type="Area2D" parent="." groups=["Hurtbox"]]
position = Vector2(-20, 0)

[node name="KimHurtbox" type="CollisionShape2D" parent="KimHurtbox"]
position = Vector2(19.5, 6)
shape = SubResource("RectangleShape2D_77iyd")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_72425")
bus = &"SFX"

[connection signal="area_entered" from="KimSprite/KimVisao" to="." method="_on_kim_visao_area_entered"]
[connection signal="area_exited" from="KimSprite/KimVisao" to="." method="_on_kim_visao_area_exited"]
[connection signal="area_entered" from="KimHurtbox" to="." method="_on_kim_hurtbox_area_entered"]
